[package]
name = "download-extract-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.7"
flate2 = "1.0.27"
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }
hex = "0.4.3"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
sha2 = "0.10.7"
tar = "0.4.40"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec", "io", "io-util"] }
zstd = "0.12.4"
